2015-09-11  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* godmode/setup/setup_tags.php: Improved the tag CRUD
	operations.

	* include/functions_api.php: Added tags adition to the
	lead creation.

	* include/functions_tags.php: Added a lot of new functions
	and improved the old.
	
	* include/styles/integria.css: Major improvements to the
	tag styles.

	* operation/leads/lead.php: Required the tags functions.
	
	* operation/leads/lead_detail.php: Added support to the
	tags (filtering, custom search, CRUD for leads, etc.).

	* operation/leads/lead_export.php,
	  operation/leads/lead_pipeline.php,
	  operation/leads/lead_statistics.php: Added tags to the
	filter.

2015-09-10  Vanessa Gil <vanessa.gil@artica.es>
	
	* functions_api.php: Modified api_ovo_manager.

2015-09-09  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* integria_db.sql,
	  integria_dbdata.sql: Updated with the data of the new
	MR27.
	
2015-09-09  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* operation/side_menu.php: Added a link to the setup side
	menu for the new tags management section.
	
2015-09-09  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* extras/mr/27.sql: Added tables for the new tags and the
	relation between tags and leads.
	
	* godmode/setup/setup_tags.php: Added a section to manage
	the tags.
	
	* include/functions_tags.php: Added functions to work with
	the tags.

2015-09-09  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/functions.php: Added the function 'is_ajax'.
	
	* include/functions_html.php: Added a better functions to
	print the select inputs (from pandora).
	
	* include/styles/integria.css: Improved the style of the
	multiselects.
	
2015-09-04  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/integria_cron.php: Fixed an error that not allowed
	the failed mails to update their failed attempts.
	
2015-09-04  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* operation/projects/project_report.php,